# lib_xua

./: .cproject  .gitignore  .project  CHANGELOG  CHANGELOG.rst  Jenkinsfile  LICENSE.txt  README.rst  deps.cmake  requirements.txt  settings.yml  xpd.xml
dfu_debug/: config.xscope  dfu_handler.h  makefile  requests.c  requests.h  test.xc  uac_hwresources.h  vfst_base_usb.xn  xua.h  xud.xc  xud_device.h
doc/: Doxyfile.inc  exclude_patterns.inc
doc_dfu/: LICENSE.txt  Makefile  building_xmos_dfu.rst  index.rst  xmos_dfu.rst
examples/: CMakeLists.txt  deps.cmake
host_usb_mixer_control/: .project  Makefile.OSX  Makefile.Win  README  host_usb_mixer_control.vcxproj  host_usb_mixer_control.vcxproj.filters  mixer_app.cpp  module_description  setup.sh  usb_mixer.cpp  usb_mixer.h
legacy_tests/: runtests.py
lib_xua/: .cproject  .gitignore  .project  .xproject  LICENSE.txt  lib_build_info.cmake  module_build_info  wscript
lib_xua/host/xmosdfu/: .gitignore  CMakeLists.txt  Makefile.Linux32  Makefile.Linux64  Makefile.OSX32  Makefile.OSX64  Makefile.Pi  Makefile.Win32  testdfu.sh  xmosdfu.cpp
lib_xua/host/xmosdfu/libusb/OSX64/: libusb.h
lib_xua/host/xmosdfu/libusb/OSXARM/: libusb-1.0.0.dylib
lib_xua/host/xmosdfu/libusb/Win32/: libusb-1.0.lib
lib_xua/host/xmosdfu/src/: xmosdfu.cpp
module_dfu/: .cproject  .project  .xproject  README  module_build_info
module_locks/: README.rst  module_build_info
module_queue/: .cproject  .project  README.rst  module_build_info  wscript
module_usb_aud_shared/: README  audio.h  audio.xc  clockcmds.h  dbtable.h  devicedefines.h  main.xc  module_build_info  module_description  reboot.c  reboot.s  reboot.xc  reboot.xcnot  rebootwrapper.s  rebootwrapper.xcnot
tests/xua_hw_tests/test_control/host/: CMakeLists.txt
tests/xua_hw_tests/test_control/host/src/: control_test.cpp  device_access_usb.c  device_access_usb.h
tests/xua_hw_tests/test_dfu/host/: CMakeLists.txt
tests/xua_hw_tests/test_dfu/host/src/: control_test.cpp  device_access_usb.c  device_access_usb.h
tests/xua_hw_tests/test_dfu/host/src/libusb/Win32/: README.md  libusb-1.0.lib
tests/xua_sim_tests/: CMakeLists.txt  conftest.py  i2s_loopback_params.json  i2s_slave_checker.py  i2s_slave_sync_params.json  i2s_trace_2_2.txt  test_audio_stop_start.expect  test_audio_stop_start.py  test_audio_stop_start_no_streams.expect  test_audio_stop_start_std.expect  test_audio_stop_start_std_lp.expect  test_decouple_in_overflow.expect  test_decouple_in_overflow.py  test_decouple_in_underflow.py  test_decouple_out_overflow.py  test_decouple_out_underflow.py  test_deps.cmake  test_i2s_loopback.py  test_i2s_slave_sync.py  test_midi.py  test_mixer_routing_input.py  test_mixer_routing_input_ctrl.py  test_mixer_routing_output.py  test_mixer_routing_output_ctrl.py  test_sync_clk_basic.py  test_sync_clk_plugin.py  test_version.py  uart_rx_checker.py  uart_tx_checker.py
tests/xua_sim_tests/shared/: mixer_test_shared.h
tests/xua_sim_tests/test_audio_stop_start/: CMakeLists.txt
tests/xua_sim_tests/test_audio_stop_start/src/: audiohw.xc  debug_conf.h  hid_report_descriptor.h  main.xc  simulation.xc  usb_device.h  xua_conf.h
tests/xua_sim_tests/test_decouple_in_overflow/: CMakeLists.txt
tests/xua_sim_tests/test_decouple_in_overflow/src/: main.xc  xua_conf.h
tests/xua_sim_tests/test_decouple_in_underflow/: CMakeLists.txt
tests/xua_sim_tests/test_decouple_in_underflow/src/: main.xc  xua_conf.h
tests/xua_sim_tests/test_decouple_out_overflow/: CMakeLists.txt
tests/xua_sim_tests/test_decouple_out_overflow/src/: main.xc  xua_conf.h
tests/xua_sim_tests/test_decouple_out_underflow/: CMakeLists.txt
tests/xua_sim_tests/test_decouple_out_underflow/src/: main.xc  xua_conf.h
tests/xua_sim_tests/test_i2s_loopback/: CMakeLists.txt  main.xc  simulation.xc  usb_device.h
tests/xua_sim_tests/test_i2s_loopback/src/: debug_conf.h  hid_report_descriptor.h  main.xc  simulation.xc  usb_device.h  usb_device.xc  xua_conf.h
tests/xua_sim_tests/test_i2s_loopback/src/xk_216_mc/: audiohw.xc  cs2100.h  cs4384.h  cs5368.h  gpio_access.c  gpio_access.h  xk-audio-216-mc.xn
tests/xua_sim_tests/test_i2s_loopback/xk_216_mc/: cs2100.h  cs4384.h  gpio_access.h
tests/xua_sim_tests/test_i2s_slave_sync/: CMakeLists.txt
tests/xua_sim_tests/test_i2s_slave_sync/src/: main.xc
tests/xua_sim_tests/test_midi/: CMakeLists.txt
tests/xua_sim_tests/test_midi/src/: app_midi_simple.xc  hwsupport.xc  xua_conf.h  xud_conf.h
tests/xua_sim_tests/test_midi_xs2/: CMakeLists.txt
tests/xua_sim_tests/test_mixer_routing_input/: CMakeLists.txt  Makefile
tests/xua_sim_tests/test_mixer_routing_input/src/: main.xc  xua_conf.h
tests/xua_sim_tests/test_mixer_routing_input_ctrl/: CMakeLists.txt  Makefile
tests/xua_sim_tests/test_mixer_routing_input_ctrl/src/: main.xc  xua_conf.h
tests/xua_sim_tests/test_mixer_routing_output/: CMakeLists.txt
tests/xua_sim_tests/test_mixer_routing_output/src/: main.xc
tests/xua_sim_tests/test_mixer_routing_output_ctrl/: CMakeLists.txt
tests/xua_sim_tests/test_mixer_routing_output_ctrl/src/: main.xc  xua_conf.h
tests/xua_sim_tests/test_sync_clk_basic/: CMakeLists.txt  Makefile
tests/xua_sim_tests/test_sync_clk_basic/src/: main.xc  xua_conf.h
tests/xua_sim_tests/test_sync_clk_plugin/: CMakeLists.txt  Makefile
tests/xua_sim_tests/test_sync_clk_plugin/src/: main.xc  test_xs3_600.xn  xua_conf.h
tests/xua_unit_tests/: CMakeLists.txt  README.md  conftest.py  generate_unity_runner.py  generate_unity_runners.py  wscript
tests/xua_unit_tests/src/: hid_report_descriptor.h  test_hid.c  test_hid.xc  test_hid_multi_report.c  test_midi_parse.c  test_midi_queue.c  xua_conf.h  xua_unit_test_helper.xc  xua_unit_tests.h
tests/xua_unit_tests/src/test_hid/: test_hid.xc
tests/xua_unit_tests/src/test_midi_parse/: hid_report_descriptor.h  test_midi_parse.c
tests/xua_unit_tests/src/test_midi_queue/: test_midi_queue.c
tests/xua_unit_tests/src/test_multi_report/: hid_report_descriptor.h  test_hid_multi_report.c
tests/xua_unit_tests/src/test_simple/: hid_report_descriptor.h  test_hid.c
(+680 files in other folders)
